# text2palette

./: .gitignore  README.md  pyproject.toml  requirement.txt
color_palette_completion/data/crello-dataset-v2/: README.md
color_palette_completion/data/samples/colors/: text_palette.csv  text_palette_new.csv
color_palette_completion/data/samples/crello_samples/: json_sample_276.json  json_sample_9.json
color_palette_completion/data/t2p/color/: color_vocab_lab_bins_16_train_sklearn.txt
color_palette_completion/data/trained_model/t2p_ca1_mca1_i10t_stop30_lr0.0002__clip_512d_lab_bins_16_0.4_0.5_0/: saved_model.pb
color_palette_completion/notebooks/: create_json_file.ipynb  palette_compl.ipynb  preprocess.ipynb  train_model.ipynb
color_palette_completion/src/color_palette_completion/preprocess/: color_extractor.py
color_palette_completion/src/color_palette_completion/text_color_model/: color_model.py  input_data_generator.py  model_config.py
color_palette_completion/src/color_palette_completion/utils/: color_convertor.py  image_label_detector.py  text_emb_creator.py
full_palette_generation/data/colors/: palette_and_text_val.csv
full_palette_generation/data/data_colors/: palette_and_text_test.csv  palette_and_text_train.csv
full_palette_generation/data/t2p/color/: color_corpus_lab_bins_16_test.txt
full_palette_generation/data_sample/: text_input_emb_clip_sample.txt
full_palette_generation/dccw/: similarity_measurer.py
full_palette_generation/notebooks/: eval_model.ipynb  palette_gen.ipynb  preprocess.ipynb  train_model.ipynb
(+15 files in other folders)
